# dpmcore

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  dummy_sub_multi_serialization.md  pyproject.toml  test.py  test_139_script.py  test_e4427_e(5).py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  create-release.yml  docs.yml  release.yml  testing.yml  ubuntu_test_24_04.yml  version.yml
data/DPM/: ATTT2Hierarchies.csv  Aux_CellMapping.csv  Category.csv  ChangeLog.csv  ChangeLogAttribute.csv  CompoundItemContext.csv  CompoundKey.csv  ConceptRelation.csv  DPMAttribute.csv  DPMClass.csv  DataType.csv  Document.csv  DocumentVersion.csv  Framework.csv  Header.csv  Item.csv  ItemCategory.csv  KeyComposition.csv  KeyHeaderMapping.csv  Language.csv  ModelViolations.csv  Module.csv  ModuleParameters.csv  ModuleVersion.csv  ModuleVersionComposition.csv  Operation.csv  OperationCodePrefix.csv  OperationScope.csv  OperationScopeComposition.csv  OperationVersionData.csv  Operator.csv  OperatorArgument.csv  Organisation.csv  PSCurrentItemCategory.csv  PSCurrentPropertyCategory.csv  Property.csv  PropertyCategory.csv  Reference.csv  RelatedConcept.csv  Release.csv  (+19 more)
docs/: CNAME  cli.rst  conf.py  index.rst  poly.py
docs/api/: ast_generator.rst  connection.rst  data_dictionary.rst  database_update.rst  dpm_xl.rst  explorer.rst  export_csv.rst  expression_metadata.rst  hierarchy.rst  index.rst  layout_exporter.rst  meili.rst  migration.rst  scope_calculator.rst  semantic.rst  syntax.rst
docs/guide/: installation.rst  migration.rst  modelling.rst  quickstart.rst  xbrl_import.rst
scripts/: IRRBB-1.2.0.dpmcore.json  _eba_parity.py  check_all_modules_parity.py  check_export_parity.py  check_semantic.py  check_syntax.py  export_calculations.py  generate_calculations_graph.py  generate_module_from_db.py  parity_report.json  parity_report.txt  qa_report.json  qa_report.txt  test_all_modules(1).py
scripts/mdpm_references/: AE-1.2.0.json  AE-1.4.0.json  CODIS-2.0.0.json  CODIS-2.1.0.json  CONDIS-1.0.0.json  COREP_FRTB-3.1.0.json  COREP_FRTB-3.4.0.json  COREP_LCR_DA-3.1.0.json  COREP_LCR_DA-3.3.0.json  COREP_LE-3.1.0.json  COREP_LE-3.3.0.json  COREP_LR-3.1.0.json  COREP_LR-4.0.0.json  COREP_LR-4.1.0.json  COREP_NSFR-3.1.0.json  COREP_NSFR-3.2.0.json  COVID19-1.0.1.json  DORA-1.1.0.json  ESG-1.0.0.json  ESG-1.2.0.json  ESG-1.3.0.json  ESGDIS-1.0.0.json  ESGDIS-2.0.0.json  ESGDIS-2.1.0.json  FC-1.0.0.json  FC-1.1.1.json  FINDIS-1.0.0.json  FINDIS-2.0.0.json  FINDIS-2.1.0.json  FP-2.1.0.json  FP-2.2.1.json  GSII-1.1.0.json  GSII-1.3.0.json  GSIIDIS-1.0.0.json  GSIIDIS-1.1.0.json  IF_CLASS2-1.2.0.json  IF_CLASS3-1.2.0.json  IF_CLASS3-1.4.0.json  IF_GROUPTEST-1.2.0.json  IF_GROUPTEST-1.4.0.json  (+57 more)
scripts/parity/: README.md  export_goldens.sql
specification/: 00-overview.md  01-orm-layer.md  02-rest-api.md  03-services.md  04-usage-modes.md  05-schema-migrations.md  06-api-messages.md  07-project-setup.md  08-modelling-services.md  08-xbrl-taxonomy-import.md
specification/reference/stored-procedures/: Cleaning_Service_01.sql  DeleteDPMRefitTables.sql  DisableForeignKeys.sql  DropDPMRefitTables.sql  DropForeignKeys.sql  EnableForeignKeys.sql  SetColumnToNullable.sql  check_modelling_rules_playground.sql  check_modelling_rules_tidy.sql  insert_GUIDs.sql  variable_generation_tidy.sql
src/dpmcore/: __init__.py  connection.py  errors.py
src/dpmcore/cli/: __init__.py  main.py
src/dpmcore/data/: __init__.py  module_schema_mapping.csv
src/dpmcore/django/: __init__.py  admin.py  apps.py  bridge.py  routers.py  urls.py
src/dpmcore/dpm_xl/: __init__.py  model_queries.py  semantic_analyzer.py  symbols.py  warning_collector.py
src/dpmcore/loaders/: __init__.py  _sqlite_output.py  migration.py
src/dpmcore/orm/: __init__.py  _compat.py  auxiliary.py  base.py  glossary.py  infrastructure.py  operations.py  packaging.py  query_utils.py  release_sort_order.py  rendering.py  variables.py
src/dpmcore/server/: __init__.py  app.py  envelope.py  params.py
src/dpmcore/services/: __init__.py  _open_keys.py  ast_generator.py  data_dictionary.py  database_update.py  dpm_xl.py  ecb_validations_import.py  explorer.py  export_csv.py  expression_metadata.py  hierarchy.py  meili_build.py  meili_json.py  migration.py  parameter_scope.py  schema_validation.py  scope_calculator.py  semantic.py  structure.py  syntax.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: conftest.py
tests/integration/api/: test_enriched_ast_multi.py  test_explorer.py  test_scope_endpoint.py  test_scripts_endpoint.py  test_severity.py
tests/integration/db/: test_db_connection_handling.py
tests/integration/models/: test_module_version.py
tests/integration/queries/: test_get_table_details.py  test_get_table_modelling.py  test_hierarchical_query.py  test_module_version_fallback.py  test_precondition_filing_indicator.py  test_query_refactor.py
tests/integration/releases/: test_data_dictionary_releases.py  test_get_tables_date_filter.py  test_get_tables_release_code.py  test_release_code_threading.py  test_release_filters_semantic.py  test_release_sort_order.py  test_semver_sort_order.py
tests/integration/services/: test_ast_generator_condexpr.py  test_calculations_graph_resolution.py  test_cross_module_classification.py  test_data_dictionary_gaps.py  test_expression_metadata.py  test_get_module_uri_integration.py  test_ghost_date_resolution.py  test_hierarchy_module_lookup.py  test_schema_validation_integration.py  test_scope_release_axis.py
tests/integration/validation/: test_implicit_open_keys.py  test_model_validation_parity.py  test_parameter_selection.py  test_semantic_all.py  test_semantic_contradictory_where.py  test_semantic_range_endpoints.py  test_semantic_release.py
tests/integration/xbrl/: conftest.py  test_import_dpm1.py  test_import_eurofiling2006.py  test_service.py
tests/unit/api/: test_instance.py
(+262 files in other folders)
