[project]
name = "dpmcore"
version = "0.1.0"
description = "Python library for DPM 2.0 Refit regulatory reporting (ORM, services, REST API)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MeaningfulData S.L.", email = "info@meaningfuldata.eu" },
]
maintainers = [
    { name = "Antonio Olleros", email = "antonio.olleros@meaningfuldata.eu" },
    { name = "Andres Manuel Sole Castillo", email = "andres.sole@meaningfuldata.eu" },
    { name = "Francisco Javier Hernandez del Caño", email = "javier.hernandez@meaningfuldata.eu" },
]
keywords = [
    "dpm",
    "dpm-xl",
    "data-point-model",
    "xbrl",
    "regulatory-reporting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "antlr4-python3-runtime>=4.9.2,<4.9.3",
]

[project.urls]
homepage = "https://dpmcore.meaningfuldata.eu"
repository = "https://github.com/Meaningful-Data/dpmcore"
documentation = "https://docs.dpmcore.meaningfuldata.eu"
"Bug Tracker" = "https://github.com/Meaningful-Data/dpmcore/issues"

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
django = ["django>=5.2", "mssql-django>=1.5"]
postgres = ["psycopg2-binary>=2.9,<3.0"]
sqlserver = ["pyodbc>=5.1,<5.2"]
migration = ["pandas>=2.1.4"]
data = ["pandas>=2.1.4"]
cli = ["click>=8.1", "rich>=13.7"]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "django>=5.2",
    "mssql-django>=1.5",
    "psycopg2-binary>=2.9,<3.0",
    "pyodbc>=5.1,<5.2",
    "pandas>=2.1.4",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
dpmcore = "dpmcore.cli.main:main"

[tool.poetry]
packages = [{ include = "dpmcore", from = "src" }]

[dependency-groups]
dev = [
    "coverage>=7.0,<8.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0.0",
    "pyroma>=4.2",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-django>=4.8",
    "django-stubs>=5.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-multiversion>=0.2.4",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ["src/dpmcore/dpm_xl/grammar/generated"]
lint.select = [
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FURB",
    "I",
    "LOG",
    "PERF",
    "PT",
    "S",
    "SIM",
    "W",
]
lint.ignore = ["D411", "E203", "F901"]
lint.mccabe.max-complexity = 10
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/dpmcore/django/models/*" = ["D105", "D106"]
"src/dpmcore/django/admin.py" = ["D101"]
# DPM-XL engine internals: mirrors ANTLR grammar semantics, follows its
# own naming conventions, and uses star-imports as a re-export pattern.
# Public entry points are in src/dpmcore/services/ and still require
# docstrings/line-length compliance.
"src/dpmcore/dpm_xl/**" = [
    "B904",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D415",
    "D419",
    "DTZ002",
    "DTZ007",
    "E402",
    "E501",
    "F401",
    "F403",
    "F405",
]
# SQLAlchemy 2.0 declarative models use string forward references in
# Mapped[...] annotations that ruff cannot resolve statically.
"src/dpmcore/orm/*" = ["F821"]
"tests/*" = [
    "C901",
    "DTZ",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "D415",
    "E501",
    "PERF",
    "PT009",
    "PT011",
    "S101",
    "S311",
]

[tool.mypy]
files = "src"
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_errors = false
no_implicit_optional = true
show_column_numbers = true
strict_equality = true
strict_optional = true
strict = true
enable_error_code = ["redundant-expr", "truthy-bool"]
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (no DB, fast)",
    "integration: integration tests (require DB)",
    "api: REST API tests",
    "django: Django integration tests",
]
addopts = "-v --tb=short --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["src/dpmcore"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
