[project]
name = "dpmcore"
version = "0.1.0rc2"
description = "Python library for DPM 2.0 Refit regulatory reporting (ORM, services, REST API)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "MeaningfulData S.L.", email = "info@meaningfuldata.eu" },
]
maintainers = [
    { name = "Antonio Olleros", email = "antonio.olleros@meaningfuldata.eu" },
    { name = "Andres Manuel Sole Castillo", email = "andres.sole@meaningfuldata.eu" },
    { name = "Francisco Javier Hernandez del Caño", email = "javier.hernandez@meaningfuldata.eu" },
]
keywords = [
    "dpm",
    "dpm-xl",
    "data-point-model",
    "xbrl",
    "regulatory-reporting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    # Runtime must match the ANTLR version used to generate the grammar
    # in src/dpmcore/dpm_xl/grammar/generated/. Regenerating with a newer
    # ANTLR is tracked separately.
    "antlr4-python3-runtime>=4.9,<4.10",
]

[project.urls]
homepage = "https://dpmcore.meaningfuldata.eu"
repository = "https://github.com/Meaningful-Data/dpmcore"
documentation = "https://docs.dpmcore.meaningfuldata.eu"
"Bug Tracker" = "https://github.com/Meaningful-Data/dpmcore/issues"

[project.optional-dependencies]
# Floors aligned with Ubuntu 24.04 (Noble) apt package versions so that
# ubuntu_test_24_04.yml can install this library with system packages
# via `pip install --no-dependencies`. Version bumps above these floors
# should stay within semver compatibility.
server = ["fastapi>=0.101", "uvicorn[standard]>=0.27"]
django = ["django>=4.2", "mssql-django>=1.4"]
postgres = ["psycopg2-binary>=2.9,<3.0"]
sqlserver = ["pyodbc>=5.0"]
# pandas / numpy ranges mirror vtlengine's published pins so that
# dpmcore + vtlengine can be co-installed without resolver conflicts.
migration = ["pandas>=2.1.4,<3.0", "numpy>=2.2.0,<2.3"]
data = ["pandas>=2.1.4,<3.0", "numpy>=2.2.0,<2.3"]
cli = ["click>=8.1", "rich>=13.7"]
export = ["openpyxl>=3.1"]
all = [
    "fastapi>=0.101",
    "uvicorn[standard]>=0.27",
    "django>=4.2",
    "mssql-django>=1.4",
    "psycopg2-binary>=2.9,<3.0",
    "pyodbc>=5.0",
    "pandas>=2.1.4,<3.0",
    "numpy>=2.2.0,<2.3",
    "click>=8.1",
    "rich>=13.7",
    "openpyxl>=3.1",
]

[project.scripts]
dpmcore = "dpmcore.cli.main:main"

[tool.poetry]
packages = [{ include = "dpmcore", from = "src" }]

[tool.poetry.group.dev.dependencies]
coverage = ">=7.6,<8.0"
ruff = ">=0.14"
mypy = ">=1.13"
pytest = ">=8.3"
pytest-asyncio = ">=0.24"
pytest-cov = ">=6.0"
pyroma = ">=4.2"
httpx = ">=0.28,<1.0"
pytest-django = ">=4.9"
django-stubs = ">=5.1"
pandas-stubs = ">=2.2.2,<3.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.4"
sphinx-rtd-theme = ">=3.0"
sphinx-autodoc-typehints = ">=2.3"
sphinx-multiversion = ">=0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ["src/dpmcore/dpm_xl/grammar/generated"]
lint.select = [
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FURB",
    "I",
    "LOG",
    "PERF",
    "PT",
    "S",
    "SIM",
    "W",
]
lint.ignore = ["D411", "E203", "F901"]
lint.mccabe.max-complexity = 10
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/dpmcore/django/models/*" = ["D105", "D106"]
"src/dpmcore/django/admin.py" = ["D101"]
# DPM-XL engine internals: mirrors ANTLR grammar semantics, follows its
# own naming conventions, and uses star-imports as a re-export pattern.
# Public entry points are in src/dpmcore/services/ and still require
# docstrings/line-length compliance.
"src/dpmcore/dpm_xl/**" = [
    "B007",
    "B023",
    "B904",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D415",
    "D419",
    "DTZ002",
    "DTZ007",
    "E402",
    "E501",
    "ERA001",
    "F401",
    "F403",
    "F405",
    "PERF203",
    "PERF401",
    "PERF402",
    "PERF403",
    "SIM102",
    "SIM103",
    "SIM108",
]
# SQLAlchemy 2.0 declarative models use string forward references in
# Mapped[...] annotations that ruff cannot resolve statically.
"src/dpmcore/orm/*" = ["F821"]
"tests/*" = [
    "C901",
    "DTZ",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "D415",
    "E402",
    "E501",
    "ERA001",
    "PERF",
    "PT009",
    "PT011",
    "S101",
    "S311",
    "S603",
    "S607",
    "SIM117",
]

[tool.mypy]
files = ["src"]
exclude = [
    "^src/dpmcore/dpm_xl/grammar/",
    "^tests/",
]
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_errors = false
no_implicit_optional = true
show_column_numbers = true
strict_equality = true
strict_optional = true
strict = true
enable_error_code = ["redundant-expr", "truthy-bool"]
warn_return_any = false

# antlr4 runtime is pinned to >=4.9,<4.10 to match the grammar
# regeneration target. types-antlr4-python3-runtime only ships
# 4.13.x stubs on PyPI, which would drift from our runtime; fall
# back to ignore_missing_imports here.
[[tool.mypy.overrides]]
module = ["antlr4", "antlr4.*"]
ignore_missing_imports = true

# ANTLR-generated parser/lexer/visitor/listener files plus the
# hand-written pass-through __init__.py. Kept out of scope per issue
# #11 (grammar is regenerated from the .g4 sources). The exclude
# pattern above does not apply when paths are passed on the CLI;
# this override provides the authoritative suppression.
[[tool.mypy.overrides]]
module = ["dpmcore.dpm_xl.grammar", "dpmcore.dpm_xl.grammar.*"]
ignore_errors = true

# pyodbc ships a .pyi stub alongside its C extension but does not
# include a py.typed marker, so mypy refuses to load the stubs under
# strict mode. Allow the bare import; narrow enough that real typos
# in other third-party imports still surface.
[[tool.mypy.overrides]]
module = ["pyodbc"]
ignore_missing_imports = true

# openpyxl ships untyped. Used by the layout_exporter Excel writer;
# allow the bare imports rather than installing third-party stubs
# that may drift from the runtime version.
[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

# Django ORM field declarations (CharField(...), ForeignKey(...),
# etc.) collapse to Field[Any, Any] without the full mypy_django_plugin
# setup. The plugin requires a DJANGO_SETTINGS_MODULE that dpmcore
# (being a library consumed by Django projects) deliberately does
# not provide. Disable var-annotated here so model files don't need
# an explicit generic annotation on every field; all other strict
# checks remain active. Consumers who wire up the plugin in their
# own project get full field typing.
[[tool.mypy.overrides]]
module = ["dpmcore.django.models.*"]
disable_error_code = ["var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (no DB, fast)",
    "integration: integration tests (require DB)",
    "api: REST API tests",
    "django: Django integration tests",
]
addopts = "-v --tb=short --strict-markers --strict-config --import-mode=importlib"
# coverage.py's own .coverage SQLite files are not closed before the
# interpreter exits under sys.monitoring on Windows/Python 3.13 — a
# known upstream issue. The warnings are cosmetic (coverage owns
# those connections; our tests do not leak). Filter by module so we
# still see ResourceWarnings from our code.
filterwarnings = [
    "ignore::ResourceWarning:coverage.collector",
    "ignore::ResourceWarning:coverage.bytecode",
]

[tool.coverage.run]
branch = true
source = ["src/dpmcore"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
